[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Graphics/Worm/Worm.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Worm/Worm.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 7 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 24 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 24 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Worm" type="Node2D" groups=["Enemies"]]
script = ExtResource( 2 )

[node name="Body" type="KinematicBody2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 4 )

[node name="BodyArea" type="Area2D" parent="Body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/BodyArea"]
shape = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
offset = Vector2( 0, -5 )
flip_h = true

[node name="RemovalTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="RemovalTimer" to="." method="_on_RemovalTimer_timeout"]
